[package]
name = "uapi-test"
version = "0.2.0"
authors = ["Mikko Perttunen <cyndis@kapsi.fi>"]
edition = "2018"
license = "MIT"

[dependencies]
libc = "0.2"
errno = "0.2"
structopt = { version = "0.3", default-features = false }
memmap = "0.7"
bytemuck = "1.4"
anyhow = "1"

[profile.release]
debug = 2
